--- a/cycloid/Controls/TrackSplitContainer.xaml
+++ b/cycloid/Controls/TrackSplitContainer.xaml
@@ -5,8 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:cycloid.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Canvas.Left="{x:Bind Mode=OneWay, Path=LeftOfMarker}"
-    Width="12"
-    Height="12"
+    Canvas.Left="{x:Bind Mode=OneWay, Path=MarkerLeft}"
+    Width="{x:Bind Mode=OneWay, Path=local:TrackSplitter.SplitWidth}"
+    Height="{x:Bind Mode=OneWay, Path=local:TrackSplitter.SplitHeight}"
     Margin="-6,0,0,0"
     Unloaded="ContentPresenter_Unloaded" />
